@@ -1,6 +1,6 @@
 //
 //  ========================================================================
-//  Copyright (c) 1995-2017 Mort Bay Consulting Pty. Ltd.
+//  Copyright (c) 1995-2019 Mort Bay Consulting Pty. Ltd.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
@@ -53,6 +53,7 @@ public class JDBCLoginModule extends AbstractDatabaseLoginModule
      * @return the connection for this datasource
      * @throws Exception if unable to get the connection
      */
+    @Override
     public Connection getConnection ()
     throws Exception
     {
@@ -81,6 +82,7 @@ public class JDBCLoginModule extends AbstractDatabaseLoginModule
      * @param sharedState the shared state map
      * @param options the options map
      */
+    @Override
     public void initialize(Subject subject,
                            CallbackHandler callbackHandler,
                            Map<String,?> sharedState,
@@ -103,17 +105,9 @@ public class JDBCLoginModule extends AbstractDatabaseLoginModule
                 dbPassword = "";
 
             if (dbDriver != null)
-                Loader.loadClass(dbDriver).newInstance();
+                Loader.loadClass(dbDriver).getDeclaredConstructor().newInstance();
         }
-        catch (ClassNotFoundException e)
-        {
-            throw new IllegalStateException (e.toString());
-        }
-        catch (InstantiationException e)
-        {
-            throw new IllegalStateException (e.toString());
-        }
-        catch (IllegalAccessException e)
+        catch (Exception e)
         {
             throw new IllegalStateException (e.toString());
         }
