@@ -1,6 +1,6 @@
 //
 //  ========================================================================
-//  Copyright (c) 1995-2017 Mort Bay Consulting Pty. Ltd.
+//  Copyright (c) 1995-2019 Mort Bay Consulting Pty. Ltd.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
@@ -170,7 +170,7 @@ public class JDBCLoginService extends AbstractLoginService
                    + " = u."
                    + _userRoleTableRoleKey;
         
-        Loader.loadClass(_jdbcDriver).newInstance();
+        Loader.loadClass(_jdbcDriver).getDeclaredConstructor().newInstance();
         super.doStart();
     }
 
@@ -219,6 +219,7 @@ public class JDBCLoginService extends AbstractLoginService
     
 
     /* ------------------------------------------------------------ */
+    @Override
     public UserPrincipal loadUserInfo (String username)
     {
         try
@@ -255,6 +256,7 @@ public class JDBCLoginService extends AbstractLoginService
 
     
     /* ------------------------------------------------------------ */
+    @Override
     public String[] loadRoleInfo (UserPrincipal user)
     {
         JDBCUserPrincipal jdbcUser = (JDBCUserPrincipal)user;
