@@ -1,6 +1,6 @@
 //
 //  ========================================================================
-//  Copyright (c) 1995-2017 Mort Bay Consulting Pty. Ltd.
+//  Copyright (c) 1995-2019 Mort Bay Consulting Pty. Ltd.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
@@ -21,12 +21,12 @@ package org.eclipse.jetty.server.handler;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.lang.reflect.Method;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.security.AccessController;
+import java.security.PrivilegedAction;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -98,29 +98,26 @@ import org.eclipse.jetty.util.resource.Resource;
  * If the context init parameter "org.eclipse.jetty.server.context.ManagedAttributes" is set to a comma separated list of names, then they are treated as
  * context attribute names, which if set as attributes are passed to the servers Container so that they may be managed with JMX.
  * <p>
- * The maximum size of a form that can be processed by this context is controlled by the system properties org.eclipse.jetty.server.Request.maxFormKeys
- * and org.eclipse.jetty.server.Request.maxFormContentSize.  These can also be configured with {@link #setMaxFormContentSize(int)} and {@link #setMaxFormKeys(int)}
+ * The maximum size of a form that can be processed by this context is controlled by the system properties org.eclipse.jetty.server.Request.maxFormKeys and
+ * org.eclipse.jetty.server.Request.maxFormContentSize. These can also be configured with {@link #setMaxFormContentSize(int)} and {@link #setMaxFormKeys(int)}
  * <p>
  * This servers executor is made available via a context attributed "org.eclipse.jetty.server.Executor".
  * <p>
- * By default, the context is created with alias checkers for {@link AllowSymLinkAliasChecker} (unix only) and {@link ApproveNonExistentDirectoryAliases}.
- * If these alias checkers are not required, then {@link #clearAliasChecks()} or {@link #setAliasChecks(List)} should be called.
+ * By default, the context is created with alias checkers for {@link AllowSymLinkAliasChecker} (unix only) and {@link ApproveNonExistentDirectoryAliases}. If
+ * these alias checkers are not required, then {@link #clearAliasChecks()} or {@link #setAliasChecks(List)} should be called.
  */
 @ManagedObject("URI Context")
 public class ContextHandler extends ScopedHandler implements Attributes, Graceful
 {
-    public final static int SERVLET_MAJOR_VERSION=3;
-    public final static int SERVLET_MINOR_VERSION=1;
-    public static final Class<?>[] SERVLET_LISTENER_TYPES = new Class[] {ServletContextListener.class,
-        ServletContextAttributeListener.class,
-        ServletRequestListener.class,
-        ServletRequestAttributeListener.class};
+    public final static int SERVLET_MAJOR_VERSION = 3;
+    public final static int SERVLET_MINOR_VERSION = 1;
+    public static final Class<?>[] SERVLET_LISTENER_TYPES = new Class[]
+    { ServletContextListener.class, ServletContextAttributeListener.class, ServletRequestListener.class, ServletRequestAttributeListener.class };
 
     public static final int DEFAULT_LISTENER_TYPE_INDEX = 1;
     public static final int EXTENDED_LISTENER_TYPE_INDEX = 0;
 
-
-    final private static String __unimplmented="Unimplemented - use org.eclipse.jetty.servlet.ServletContextHandler";
+    final private static String __unimplmented = "Unimplemented - use org.eclipse.jetty.servlet.ServletContextHandler";
 
     private static final Logger LOG = Log.getLogger(ContextHandler.class);
 
@@ -149,10 +146,10 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /* ------------------------------------------------------------ */
     public static ContextHandler getContextHandler(ServletContext context)
     {
-        if(context instanceof ContextHandler.Context)
+        if (context instanceof ContextHandler.Context)
             return ((ContextHandler.Context)context).getContextHandler();
-        Context c=  getCurrentContext();
-        if (c!=null)
+        Context c = getCurrentContext();
+        if (c != null)
             return c.getContextHandler();
         return null;
     }
@@ -183,29 +180,34 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     private Map<String, String> _localeEncodingMap;
     private String[] _welcomeFiles;
     private ErrorHandler _errorHandler;
-    private String[] _vhosts;
+
+    private String[] _vhosts; // Host name portion, matching _vconnectors array
+    private boolean[] _vhostswildcard;
+    private String[] _vconnectors; // connector portion, matching _vhosts array
 
     private Logger _logger;
     private boolean _allowNullPathInfo;
     private int _maxFormKeys = Integer.getInteger("org.eclipse.jetty.server.Request.maxFormKeys",-1).intValue();
     private int _maxFormContentSize = Integer.getInteger("org.eclipse.jetty.server.Request.maxFormContentSize",-1).intValue();
     private boolean _compactPath = false;
-    private boolean _usingSecurityManager = System.getSecurityManager()!=null;
+    private boolean _usingSecurityManager = System.getSecurityManager() != null;
 
-    private final List<EventListener> _eventListeners=new CopyOnWriteArrayList<>();
-    private final List<EventListener> _programmaticListeners=new CopyOnWriteArrayList<>();
-    private final List<ServletContextListener> _servletContextListeners=new CopyOnWriteArrayList<>();
-    private final List<ServletContextListener> _destroySerletContextListeners=new ArrayList<>();
-    private final List<ServletContextAttributeListener> _servletContextAttributeListeners=new CopyOnWriteArrayList<>();
-    private final List<ServletRequestListener> _servletRequestListeners=new CopyOnWriteArrayList<>();
-    private final List<ServletRequestAttributeListener> _servletRequestAttributeListeners=new CopyOnWriteArrayList<>();
+    private final List<EventListener> _eventListeners = new CopyOnWriteArrayList<>();
+    private final List<EventListener> _programmaticListeners = new CopyOnWriteArrayList<>();
+    private final List<ServletContextListener> _servletContextListeners = new CopyOnWriteArrayList<>();
+    private final List<ServletContextListener> _destroySerletContextListeners = new ArrayList<>();
+    private final List<ServletContextAttributeListener> _servletContextAttributeListeners = new CopyOnWriteArrayList<>();
+    private final List<ServletRequestListener> _servletRequestListeners = new CopyOnWriteArrayList<>();
+    private final List<ServletRequestAttributeListener> _servletRequestAttributeListeners = new CopyOnWriteArrayList<>();
     private final List<ContextScopeListener> _contextListeners = new CopyOnWriteArrayList<>();
     private final List<EventListener> _durableListeners = new CopyOnWriteArrayList<>();
-    private Map<String, Object> _managedAttributes;
     private String[] _protectedTargets;
     private final CopyOnWriteArrayList<AliasCheck> _aliasChecks = new CopyOnWriteArrayList<ContextHandler.AliasCheck>();
 
-    public enum Availability { UNAVAILABLE,STARTING,AVAILABLE,SHUTDOWN,};
+    public enum Availability
+    {
+        UNAVAILABLE, STARTING, AVAILABLE, SHUTDOWN,
+    };
     private volatile Availability _availability = Availability.UNAVAILABLE;
 
     /* ------------------------------------------------------------ */
@@ -235,14 +237,14 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /* ------------------------------------------------------------ */
     private ContextHandler(Context context, HandlerContainer parent, String contextPath)
     {
-        _scontext = context==null?new Context():context;
+        _scontext = context == null?new Context():context;
         _attributes = new AttributesMap();
         _initParams = new HashMap<String, String>();
         addAliasCheck(new ApproveNonExistentDirectoryAliases());
-        if (File.separatorChar=='/')
+        if (File.separatorChar == '/')
             addAliasCheck(new AllowSymLinkAliasChecker());
 
-        if (contextPath!=null)
+        if (contextPath != null)
             setContextPath(contextPath);
         if (parent instanceof HandlerWrapper)
             ((HandlerWrapper)parent).setHandler(this);
@@ -254,12 +256,12 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     @Override
     public void dump(Appendable out, String indent) throws IOException
     {
-        dumpBeans(out,indent,
-                Collections.singletonList(new ClassLoaderDump(getClassLoader())),
-                Collections.singletonList(new DumpableCollection("Handler attributes "+this,((AttributesMap)getAttributes()).getAttributeEntrySet())),
-                Collections.singletonList(new DumpableCollection("Context attributes "+this,((Context)getServletContext()).getAttributeEntrySet())),
-                Collections.singletonList(new DumpableCollection("Initparams "+this,getInitParams().entrySet()))
-                );
+        dumpObjects(out, indent,
+            new ClassLoaderDump(getClassLoader()),
+            new DumpableCollection("eventListeners " + this, _eventListeners),
+            new DumpableCollection("handler attributes " + this, ((AttributesMap)getAttributes()).getAttributeEntrySet()),
+            new DumpableCollection("context attributes " + this, ((Context)getServletContext()).getAttributeEntrySet()),
+            new DumpableCollection("initparams " + this,getInitParams().entrySet()));
     }
 
     /* ------------------------------------------------------------ */
@@ -316,59 +318,110 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
      * matching virtual host name.
      *
      * @param vhosts
-     *            Array of virtual hosts that this context responds to. A null host name or null/empty array means any hostname is acceptable. Host names may be
-     *            String representation of IP addresses. Host names may start with '*.' to wildcard one level of names.  Hosts may start with '@', in which case they
-     *            will match the {@link Connector#getName()} for the request.
+      *            Array of virtual hosts that this context responds to. A null/empty array means any hostname is acceptable. Host names may be String
+     *            representation of IP addresses. Host names may start with '*.' to wildcard one level of names. Hosts and wildcard hosts may be followed with
+     *            '@connectorname', in which case they will match only if the the {@link Connector#getName()} for the request also matches. If an entry is just
+     *            '@connectorname' it will match any host if that connector was used.  Note - In previous versions if one or more connectorname only entries existed
+     *            and non of the connectors matched the handler would not match regardless of any hostname entries.  If there is one or more connectorname only
+     *            entries and one or more host only entries but no hostname and connector entries we assume the old behavior and will log a warning.  The warning
+     *            can be removed by removing the host entries that were previously being ignored, or modifying to include a hostname and connectorname entry.
      */
     public void setVirtualHosts(String[] vhosts)
     {
+
         if (vhosts == null)
         {
             _vhosts = vhosts;
         }
         else
         {
+
+            boolean hostMatch = false;
+            boolean connectorHostMatch = false;
             _vhosts = new String[vhosts.length];
+            _vconnectors = new String[vhosts.length];
+            _vhostswildcard = new boolean[vhosts.length];
+            ArrayList<Integer> connectorOnlyIndexes = null;
             for (int i = 0; i < vhosts.length; i++)
-                _vhosts[i] = normalizeHostname(vhosts[i]);
+            {
+                boolean connectorMatch = false;
+                _vhosts[i] = vhosts[i];
+                if (vhosts[i] == null)
+                    continue;
+                int connectorIndex = _vhosts[i].indexOf('@');
+                if (connectorIndex >= 0)
+                {
+                    connectorMatch = true;
+                    _vconnectors[i] = _vhosts[i].substring(connectorIndex + 1);
+                    _vhosts[i] = _vhosts[i].substring(0,connectorIndex);
+                    if (connectorIndex == 0)
+                    {
+                        if (connectorOnlyIndexes == null)
+                            connectorOnlyIndexes = new ArrayList<Integer>();
+                        connectorOnlyIndexes.add(i);
+                    }
+                }
+
+                if (_vhosts[i].startsWith("*."))
+                {
+                    _vhosts[i] = _vhosts[i].substring(1);
+                    _vhostswildcard[i] = true;
+                }
+                if (_vhosts[i].isEmpty())
+                    _vhosts[i] = null;
+                else
+                {
+                    hostMatch = true;
+                    connectorHostMatch = connectorHostMatch || connectorMatch;
+                }
+                _vhosts[i] = normalizeHostname(_vhosts[i]);
+            }
+
+            if (connectorOnlyIndexes != null && hostMatch && !connectorHostMatch)
+            {
+                LOG.warn(
+                        "ContextHandler {} has a connector only entry e.g. \"@connector\" and one or more host only entries. \n"
+                                + "The host entries will be ignored to match legacy behavior.  To clear this warning remove the host entries or update to us at least one host@connector syntax entry that will match a host for an specific connector",
+                        Arrays.asList(vhosts));
+                String[] filteredHosts = new String[connectorOnlyIndexes.size()];
+                for (int i = 0; i < connectorOnlyIndexes.size(); i++)
+                {
+                    filteredHosts[i] = vhosts[connectorOnlyIndexes.get(i)];
+                }
+                setVirtualHosts(filteredHosts);
+            }
+
         }
     }
 
     /* ------------------------------------------------------------ */
-    /** Either set virtual hosts or add to an existing set of virtual hosts.
+    /**
+     * Either set virtual hosts or add to an existing set of virtual hosts.
      *
      * @param virtualHosts
-     *            Array of virtual hosts that this context responds to. A null host name or null/empty array means any hostname is acceptable. Host names may be
-     *            String representation of IP addresses. Host names may start with '*.' to wildcard one level of names. Host names may start with '@', in which case they
-     *            will match the {@link Connector#getName()} for the request.
+     *            Array of virtual hosts that this context responds to. A null/empty array means any hostname is acceptable. Host names may be String
+     *            representation of IP addresses. Host names may start with '*.' to wildcard one level of names. Hosts and wildcard hosts may be followed with
+     *            '@connectorname', in which case they will match only if the the {@link Connector#getName()} for the request also matches. If an entry is just
+     *            '@connectorname' it will match any host if that connector was used.  Note - In previous versions if one or more connectorname only entries existed
+     *            and non of the connectors matched the handler would not match regardless of any hostname entries.  If there is one or more connectorname only
+     *            entries and one or more host only entries but no hostname and connector entries we assume the old behavior and will log a warning.  The warning
+     *            can be removed by removing the host entries that were previously being ignored, or modifying to include a hostname and connectorname entry.
      */
     public void addVirtualHosts(String[] virtualHosts)
     {
-        if (virtualHosts == null)  // since this is add, we don't null the old ones
-        {
+        if (virtualHosts == null || virtualHosts.length==0) // since this is add, we don't null the old ones
             return;
+
+        if (_vhosts==null)
+        {
+            setVirtualHosts(virtualHosts);
         }
         else
         {
-            List<String> currentVirtualHosts = null;
-            if (_vhosts != null)
-            {
-                currentVirtualHosts = new ArrayList<String>(Arrays.asList(_vhosts));
-            }
-            else
-            {
-                currentVirtualHosts = new ArrayList<String>();
-            }
-
-            for (int i = 0; i < virtualHosts.length; i++)
-            {
-                String normVhost = normalizeHostname(virtualHosts[i]);
-                if (!currentVirtualHosts.contains(normVhost))
-                {
-                    currentVirtualHosts.add(normVhost);
-                }
-            }
-            _vhosts = currentVirtualHosts.toArray(new String[0]);
+            Set<String> currentVirtualHosts = new HashSet<String>(Arrays.asList(getVirtualHosts()));
+            for (String vh : virtualHosts)
+                currentVirtualHosts.add(normalizeHostname(vh));
+            setVirtualHosts(currentVirtualHosts.toArray(new String[0]));
         }
     }
 
@@ -376,42 +429,27 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /**
      * Removes an array of virtual host entries, if this removes all entries the _vhosts will be set to null
      *
-     *  @param virtualHosts
-     *            Array of virtual hosts that this context responds to. A null host name or null/empty array means any hostname is acceptable. Host names may be
-     *            String representation of IP addresses. Host names may start with '*.' to wildcard one level of names.
+     * @param virtualHosts
+     *            Array of virtual hosts that this context responds to. A null/empty array means any hostname is acceptable. Host names may be String
+     *            representation of IP addresses. Host names may start with '*.' to wildcard one level of names. Hosts and wildcard hosts may be followed with
+     *            '@connectorname', in which case they will match only if the the {@link Connector#getName()} for the request also matches. If an entry is just
+     *            '@connectorname' it will match any host if that connector was used.  Note - In previous versions if one or more connectorname only entries existed
+     *            and non of the connectors matched the handler would not match regardless of any hostname entries.  If there is one or more connectorname only
+     *            entries and one or more host only entries but no hostname and connector entries we assume the old behavior and will log a warning.  The warning
+     *            can be removed by removing the host entries that were previously being ignored, or modifying to include a hostname and connectorname entry.
      */
     public void removeVirtualHosts(String[] virtualHosts)
     {
-        if (virtualHosts == null)
-        {
+        if (virtualHosts == null || virtualHosts.length==0 || _vhosts == null || _vhosts.length == 0)
             return; // do nothing
-        }
-        else if ( _vhosts == null || _vhosts.length == 0)
-        {
-            return; // do nothing
-        }
+
+        Set<String> existingVirtualHosts = new HashSet<String>(Arrays.asList(getVirtualHosts()));
+        for (String vh : virtualHosts)
+            existingVirtualHosts.remove(normalizeHostname(vh));
+        if (existingVirtualHosts.isEmpty())
+            setVirtualHosts(null); // if we ended up removing them all, just null out _vhosts
         else
-        {
-            List<String> existingVirtualHosts = new ArrayList<String>(Arrays.asList(_vhosts));
-
-            for (int i = 0; i < virtualHosts.length; i++)
-            {
-                String toRemoveVirtualHost = normalizeHostname(virtualHosts[i]);
-                if (existingVirtualHosts.contains(toRemoveVirtualHost))
-                {
-                    existingVirtualHosts.remove(toRemoveVirtualHost);
-                }
-            }
-
-            if (existingVirtualHosts.isEmpty())
-            {
-                _vhosts = null; // if we ended up removing them all, just null out _vhosts
-            }
-            else
-            {
-                _vhosts = existingVirtualHosts.toArray(new String[0]);
-            }
-        }
+            setVirtualHosts(existingVirtualHosts.toArray(new String[0]));
     }
 
     /* ------------------------------------------------------------ */
@@ -420,13 +458,33 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
      * virtual host name. A context with no virtual host names or a null virtual host name is available to all requests that are not served by a context with a
      * matching virtual host name.
      *
-     * @return Array of virtual hosts that this context responds to. A null host name or empty array means any hostname is acceptable. Host names may be String
-     *         representation of IP addresses. Host names may start with '*.' to wildcard one level of names.
+     * @return    Array of virtual hosts that this context responds to. A null/empty array means any hostname is acceptable. Host names may be String
+     *            representation of IP addresses. Host names may start with '*.' to wildcard one level of names. Hosts and wildcard hosts may be followed with
+     *            '@connectorname', in which case they will match only if the the {@link Connector#getName()} for the request also matches. If an entry is just
+     *            '@connectorname' it will match any host if that connector was used.  Note - In previous versions if one or more connectorname only entries existed
+     *            and non of the connectors matched the handler would not match regardless of any hostname entries.  If there is one or more connectorname only
+     *            entries and one or more host only entries but no hostname and connector entries we assume the old behavior and will log a warning.  The warning
+     *            can be removed by removing the host entries that were previously being ignored, or modifying to include a hostname and connectorname entry.
      */
-    @ManagedAttribute(value="Virtual hosts accepted by the context", readonly=true)
+    @ManagedAttribute(value = "Virtual hosts accepted by the context", readonly = true)
     public String[] getVirtualHosts()
     {
-        return _vhosts;
+        if (_vhosts == null)
+            return null;
+
+        String[] vhosts = new String[_vhosts.length];
+        for (int i = 0; i < _vhosts.length; i++)
+        {
+            StringBuilder sb = new StringBuilder();
+            if (_vhostswildcard[i])
+                sb.append("*");
+            if (_vhosts[i] != null)
+                sb.append(_vhosts[i]);
+            if (_vconnectors[i] != null)
+                sb.append("@").append(_vconnectors[i]);
+            vhosts[i] = sb.toString();
+        }
+        return vhosts;
     }
 
     /* ------------------------------------------------------------ */
@@ -563,7 +621,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /*
      * @see javax.servlet.ServletContext#getServletContextName()
      */
-    @ManagedAttribute(value="Display name of the Context", readonly=true)
+    @ManagedAttribute(value = "Display name of the Context", readonly = true)
     public String getDisplayName()
     {
         return _displayName;
@@ -595,7 +653,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         _servletRequestAttributeListeners.clear();
         _eventListeners.clear();
 
-        if (eventListeners!=null)
+        if (eventListeners != null)
             for (EventListener listener : eventListeners)
                 addEventListener(listener);
     }
@@ -603,7 +661,9 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /* ------------------------------------------------------------ */
     /**
      * Add a context event listeners.
-     * @param listener the event listener to add
+     * 
+     * @param listener
+     *            the event listener to add
      *
      * @see ServletContextListener
      * @see ServletContextAttributeListener
@@ -618,7 +678,11 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             _durableListeners.add(listener);
 
         if (listener instanceof ContextScopeListener)
+        {
             _contextListeners.add((ContextScopeListener)listener);
+            if (__context.get()!=null)
+                ((ContextScopeListener)listener).enterScope(__context.get(),null,"Listener registered");
+        }
 
         if (listener instanceof ServletContextListener)
             _servletContextListeners.add((ServletContextListener)listener);
@@ -636,7 +700,9 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /* ------------------------------------------------------------ */
     /**
      * Remove a context event listeners.
-     * @param listener the event listener to remove
+     * 
+     * @param listener
+     *            the event listener to remove
      *
      * @see ServletContextListener
      * @see ServletContextAttributeListener
@@ -667,9 +733,10 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /**
      * Apply any necessary restrictions on a programmatic added listener.
      *
-     * @param listener the programmatic listener to add
+     * @param listener
+     *            the programmatic listener to add
      */
-    protected void addProgrammaticListener (EventListener listener)
+    protected void addProgrammaticListener(EventListener listener)
     {
         _programmaticListeners.add(listener);
     }
@@ -679,8 +746,6 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     {
         return _programmaticListeners.contains(listener);
     }
-
-
 
     /* ------------------------------------------------------------ */
     /**
@@ -701,7 +766,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     @Override
     public Future<Void> shutdown()
     {
-        _availability = isRunning() ? Availability.SHUTDOWN : Availability.UNAVAILABLE;
+        _availability = isRunning()?Availability.SHUTDOWN:Availability.UNAVAILABLE;
         return new FutureCallback(true);
     }
 
@@ -711,13 +776,15 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
      */
     public boolean isAvailable()
     {
-        return _availability==Availability.AVAILABLE;
+        return _availability == Availability.AVAILABLE;
     }
 
     /* ------------------------------------------------------------ */
     /**
      * Set Available status.
-     * @param available true to set as enabled
+     * 
+     * @param available
+     *            true to set as enabled
      */
     public void setAvailable(boolean available)
     {
@@ -754,19 +821,11 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         if (_contextPath == null)
             throw new IllegalStateException("Null contextPath");
 
-        if (_logger==null)
+        if (_logger == null)
         {
-            String log_name = getDisplayName();
-            if (log_name == null || log_name.isEmpty())
-            {
-                log_name = getContextPath();
-                if (log_name!=null || log_name.startsWith("/"))
-                    log_name = log_name.substring(1);
-                if (log_name==null || log_name.isEmpty())
-                    log_name = Integer.toHexString(hashCode());
-            }
-            _logger = Log.getLogger("org.eclipse.jetty.ContextHandler."+log_name);
+            _logger = Log.getLogger(ContextHandler.class.getName() + getLogNameSuffix());
         }
+
         ClassLoader old_classloader = null;
         Thread current_thread = null;
         Context old_context = null;
@@ -775,7 +834,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
 
         if (_mimeTypes == null)
             _mimeTypes = new MimeTypes();
-        
+
         try
         {
             // Set the classloader, context and enter scope
@@ -787,31 +846,61 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             }
             old_context = __context.get();
             __context.set(_scontext);
-            enterScope(null, getState());
+            enterScope(null,getState());
 
             // defers the calling of super.doStart()
             startContext();
 
             _availability = Availability.AVAILABLE;
-            LOG.info("Started {}", this);
+            LOG.info("Started {}",this);
         }
         finally
         {
-            if (_availability==Availability.STARTING)
-                _availability=Availability.UNAVAILABLE;
+            if (_availability == Availability.STARTING)
+                _availability = Availability.UNAVAILABLE;
             exitScope(null);
             __context.set(old_context);
             // reset the classloader
-            if (_classLoader != null && current_thread!=null)
+            if (_classLoader != null && current_thread != null)
                 current_thread.setContextClassLoader(old_classloader);
         }
+    }
+
+    private String getLogNameSuffix()
+    {
+        // Use display name first
+        String log_name = getDisplayName();
+        if (StringUtil.isBlank(log_name))
+        {
+            // try context path
+            log_name = getContextPath();
+            if (log_name != null)
+            {
+                // Strip prefix slash
+                if (log_name.startsWith("/"))
+                {
+                    log_name = log_name.substring(1);
+                }
+            }
+
+            if (StringUtil.isBlank(log_name))
+            {
+                // an empty context path is the ROOT context
+                log_name = "ROOT";
+            }
+        }
+
+        // Replace bad characters.
+        return '.' + log_name.replaceAll("\\W","_");
     }
 
     /* ------------------------------------------------------------ */
     /**
      * Extensible startContext. this method is called from {@link ContextHandler#doStart()} instead of a call to super.doStart(). This allows derived classes to
      * insert additional handling (Eg configuration) before the call to super.doStart by this method will start contained handlers.
-     * @throws Exception if unable to start the context
+     * 
+     * @throws Exception
+     *             if unable to start the context
      *
      * @see org.eclipse.jetty.server.handler.ContextHandler.Context
      */
@@ -828,31 +917,31 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         if (!_servletContextListeners.isEmpty())
         {
             ServletContextEvent event = new ServletContextEvent(_scontext);
-            for (ServletContextListener listener:_servletContextListeners)
+            for (ServletContextListener listener : _servletContextListeners)
             {
-                callContextInitialized(listener, event);
+                callContextInitialized(listener,event);
                 _destroySerletContextListeners.add(listener);
             }
         }
     }
 
     /* ------------------------------------------------------------ */
-    protected void stopContext () throws Exception
+    protected void stopContext() throws Exception
     {
-        //stop all the handler hierarchy
+        // stop all the handler hierarchy
         super.doStop();
 
-        //Call the context listeners
+        // Call the context listeners
         ServletContextEvent event = new ServletContextEvent(_scontext);
         Collections.reverse(_destroySerletContextListeners);
         MultiException ex = new MultiException();
-        for (ServletContextListener listener:_destroySerletContextListeners)
+        for (ServletContextListener listener : _destroySerletContextListeners)
         {
             try
             {
                 callContextDestroyed(listener,event);
             }
-            catch(Exception x)
+            catch (Exception x)
             {
                 ex.add(x);
             }
@@ -860,10 +949,8 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         ex.ifExceptionThrow();
     }
 
-
-
     /* ------------------------------------------------------------ */
-    protected void callContextInitialized (ServletContextListener l, ServletContextEvent e)
+    protected void callContextInitialized(ServletContextListener l, ServletContextEvent e)
     {
         if (LOG.isDebugEnabled())
             LOG.debug("contextInitialized: {}->{}",e,l);
@@ -871,7 +958,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     }
 
     /* ------------------------------------------------------------ */
-    protected void callContextDestroyed (ServletContextListener l, ServletContextEvent e)
+    protected void callContextDestroyed(ServletContextListener l, ServletContextEvent e)
     {
         if (LOG.isDebugEnabled())
             LOG.debug("contextDestroyed: {}->{}",e,l);
@@ -885,6 +972,21 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     @Override
     protected void doStop() throws Exception
     {
+        // Should we attempt a graceful shutdown?
+        MultiException mex = null;
+
+        if (getStopTimeout()>0)
+        {
+            try
+            {
+                doShutdown(null);
+            }
+            catch (MultiException e)
+            {
+                mex = e;
+            }
+        }
+        
         _availability = Availability.UNAVAILABLE;
 
         ClassLoader old_classloader = null;
@@ -906,7 +1008,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
 
             stopContext();
 
-            //retain only durable listeners
+            // retain only durable listeners
             setEventListeners(_durableListeners.toArray(new EventListener[_durableListeners.size()]));
             _durableListeners.clear();
 
@@ -922,7 +1024,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
                     {
                         ((ContextScopeListener)l).exitScope(_scontext,null);
                     }
-                    catch(Throwable e)
+                    catch (Throwable e)
                     {
                         LOG.warn(e);
                     }
@@ -930,61 +1032,72 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             }
             _programmaticListeners.clear();
         }
+        catch(Throwable x)
+        {
+            if (mex==null)
+                mex = new MultiException();
+            mex.add(x);
+        }
         finally
         {
             __context.set(old_context);
             exitScope(null);
-            LOG.info("Stopped {}", this);
+            LOG.info("Stopped {}",this);
             // reset the classloader
             if ((old_classloader == null || (old_classloader != old_webapploader)) && current_thread != null)
                 current_thread.setContextClassLoader(old_classloader);
+
+            _scontext.clearAttributes();
         }
-
-        _scontext.clearAttributes();
+        
+        if (mex!=null)
+            mex.ifExceptionThrow();
     }
-
 
     /* ------------------------------------------------------------ */
     public boolean checkVirtualHost(final Request baseRequest)
     {
-        if (_vhosts != null && _vhosts.length > 0)
+        if (_vhosts == null || _vhosts.length == 0)
+            return true;
+
+        String vhost = normalizeHostname(baseRequest.getServerName());
+        String connectorName = baseRequest.getHttpChannel().getConnector().getName();
+
+        for (int i = 0; i < _vhosts.length; i++)
         {
-            String vhost = normalizeHostname(baseRequest.getServerName());
+            String contextVhost = _vhosts[i];
+            String contextVConnector = _vconnectors[i];
 
-            boolean match = false;
-            boolean connectorName = false;
-            boolean connectorMatch = false;
-
-            for (String contextVhost:_vhosts)
+            if (contextVConnector!=null)
             {
-                if (contextVhost == null || contextVhost.length()==0)
+                if (!contextVConnector.equalsIgnoreCase(connectorName))
                     continue;
-                char c=contextVhost.charAt(0);
-                switch (c)
+           
+                if (contextVhost==null) 
                 {
-                    case '*':
-                        if (contextVhost.startsWith("*."))
-                            // wildcard only at the beginning, and only for one additional subdomain level
-                            match = match || contextVhost.regionMatches(true,2,vhost,vhost.indexOf(".") + 1,contextVhost.length() - 2);
-                        break;
-                    case '@':
-                        connectorName=true;
-                        String name=baseRequest.getHttpChannel().getConnector().getName();
-                        boolean m=name!=null && contextVhost.length()==name.length()+1 && contextVhost.endsWith(name);
-                        match = match || m;
-                        connectorMatch = connectorMatch || m;
-                        break;
-                    default:
-                        match = match || contextVhost.equalsIgnoreCase(vhost);
+                    return true;
                 }
-
+            }   
+                
+            if (contextVhost!=null)
+            {
+                if (_vhostswildcard[i])
+                {
+                    // wildcard only at the beginning, and only for one additional subdomain level
+                    int index = vhost.indexOf(".");
+                    if (index >= 0 && vhost.substring(index).equalsIgnoreCase(contextVhost))
+                    {
+                        return true;
+                    }
+                }
+                else if (vhost.equalsIgnoreCase(contextVhost))
+                {
+                    return true;
+                }
             }
-            if (!match || connectorName && !connectorMatch)
-                return false;
         }
-        return true;
+        return false;
     }
-
 
     /* ------------------------------------------------------------ */
     public boolean checkContextPath(String uri)
@@ -1018,14 +1131,14 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
 
         // Are we not the root context?
         // redirect null path infos
-        if (!_allowNullPathInfo && _contextPath.length() == target.length() && _contextPath.length()>1)
+        if (!_allowNullPathInfo && _contextPath.length() == target.length() && _contextPath.length() > 1)
         {
             // context request must end with /
             baseRequest.setHandled(true);
             if (baseRequest.getQueryString() != null)
-                response.sendRedirect(URIUtil.addPaths(baseRequest.getRequestURI(),URIUtil.SLASH) + "?" + baseRequest.getQueryString());
+                response.sendRedirect(baseRequest.getRequestURI() + "/?" + baseRequest.getQueryString());
             else
-                response.sendRedirect(URIUtil.addPaths(baseRequest.getRequestURI(),URIUtil.SLASH));
+                response.sendRedirect(baseRequest.getRequestURI() + "/");
             return false;
         }
 
@@ -1071,9 +1184,8 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         if (old_context != _scontext)
         {
             // check the target.
-            if (DispatcherType.REQUEST.equals(dispatch) ||
-                DispatcherType.ASYNC.equals(dispatch) ||
-                DispatcherType.ERROR.equals(dispatch) && baseRequest.getHttpChannelState().isAsync())
+            if (DispatcherType.REQUEST.equals(dispatch) || DispatcherType.ASYNC.equals(dispatch)
+                    || DispatcherType.ERROR.equals(dispatch) && baseRequest.getHttpChannelState().isAsync())
             {
                 if (_compactPath)
                     target = URIUtil.compactPath(target);
@@ -1130,7 +1242,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
                 enterScope(baseRequest,dispatch);
 
             if (LOG.isDebugEnabled())
-                LOG.debug("context={}|{}|{} @ {}",baseRequest.getContextPath(),baseRequest.getServletPath(), baseRequest.getPathInfo(),this);
+                LOG.debug("context={}|{}|{} @ {}",baseRequest.getContextPath(),baseRequest.getServletPath(),baseRequest.getPathInfo(),this);
 
             nextScope(target,baseRequest,request,response);
         }
@@ -1141,7 +1253,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
                 exitScope(baseRequest);
 
                 // reset the classloader
-                if (_classLoader != null && current_thread!=null)
+                if (_classLoader != null && current_thread != null)
                 {
                     current_thread.setContextClassLoader(old_classloader);
                 }
@@ -1155,13 +1267,13 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             }
         }
     }
-    
+
     /* ------------------------------------------------------------ */
     protected void requestInitialized(Request baseRequest, HttpServletRequest request)
     {
         // Handle the REALLY SILLY request events!
         if (!_servletRequestAttributeListeners.isEmpty())
-            for (ServletRequestAttributeListener l :_servletRequestAttributeListeners)
+            for (ServletRequestAttributeListener l : _servletRequestAttributeListeners)
                 baseRequest.addEventListener(l);
 
         if (!_servletRequestListeners.isEmpty())
@@ -1179,17 +1291,17 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         if (!_servletRequestListeners.isEmpty())
         {
             final ServletRequestEvent sre = new ServletRequestEvent(_scontext,request);
-            for (int i=_servletRequestListeners.size();i-->0;)
+            for (int i = _servletRequestListeners.size(); i-- > 0;)
                 _servletRequestListeners.get(i).requestDestroyed(sre);
         }
 
         if (!_servletRequestAttributeListeners.isEmpty())
         {
-            for (int i=_servletRequestAttributeListeners.size();i-->0;)
+            for (int i = _servletRequestAttributeListeners.size(); i-- > 0;)
                 baseRequest.removeEventListener(_servletRequestAttributeListeners.get(i));
         }
     }
-    
+
     /* ------------------------------------------------------------ */
     /**
      * @see org.eclipse.jetty.server.handler.ScopedHandler#doHandle(java.lang.String, org.eclipse.jetty.server.Request, javax.servlet.http.HttpServletRequest,
@@ -1205,7 +1317,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             if (new_context)
                 requestInitialized(baseRequest,request);
 
-            switch(dispatch)
+            switch (dispatch)
             {
                 case REQUEST:
                     if (isProtectedTarget(target))
@@ -1215,13 +1327,13 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
                         return;
                     }
                     break;
-                    
+
                 case ERROR:
                     // If this is already a dispatch to an error page, proceed normally
                     if (Boolean.TRUE.equals(baseRequest.getAttribute(Dispatcher.__ERROR_DISPATCH)))
                         break;
-                    
-                    // We can just call doError here.  If there is no error page, then one will
+
+                    // We can just call doError here. If there is no error page, then one will
                     // be generated. If there is an error page, then a RequestDispatcher will be
                     // used to route the request through appropriate filters etc.
                     doError(target,baseRequest,request,response);
@@ -1240,20 +1352,22 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     }
 
     /**
-     * @param request A request that is applicable to the scope, or null
-     * @param reason An object that indicates the reason the scope is being entered.
+     * @param request
+     *            A request that is applicable to the scope, or null
+     * @param reason
+     *            An object that indicates the reason the scope is being entered.
      */
     protected void enterScope(Request request, Object reason)
     {
         if (!_contextListeners.isEmpty())
         {
-            for (ContextScopeListener listener:_contextListeners)
+            for (ContextScopeListener listener : _contextListeners)
             {
                 try
                 {
                     listener.enterScope(_scontext,request,reason);
                 }
-                catch(Throwable e)
+                catch (Throwable e)
                 {
                     LOG.warn(e);
                 }
@@ -1261,21 +1375,21 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         }
     }
 
-
     /**
-     * @param request A request that is applicable to the scope, or null
+     * @param request
+     *            A request that is applicable to the scope, or null
      */
     protected void exitScope(Request request)
     {
         if (!_contextListeners.isEmpty())
         {
-            for (int i = _contextListeners.size(); i-->0;)
+            for (int i = _contextListeners.size(); i-- > 0;)
             {
                 try
                 {
                     _contextListeners.get(i).exitScope(_scontext,request);
                 }
-                catch(Throwable e)
+                catch (Throwable e)
                 {
                     LOG.warn(e);
                 }
@@ -1286,8 +1400,11 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /* ------------------------------------------------------------ */
     /**
      * Handle a runnable in the scope of this context and a particular request
-     * @param request The request to scope the thread to (may be null if no particular request is in scope)
-     * @param runnable The runnable to run.
+     * 
+     * @param request
+     *            The request to scope the thread to (may be null if no particular request is in scope)
+     * @param runnable
+     *            The runnable to run.
      */
     public void handle(Request request, Runnable runnable)
     {
@@ -1296,7 +1413,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         Context old_context = __context.get();
 
         // Are we already in the scope?
-        if (old_context==_scontext)
+        if (old_context == _scontext)
         {
             runnable.run();
             return;
@@ -1343,7 +1460,9 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /**
      * Check the target. Called by {@link #handle(String, Request, HttpServletRequest, HttpServletResponse)} when a target within a context is determined. If
      * the target is protected, 404 is returned.
-     * @param target the target to test
+     * 
+     * @param target
+     *            the target to test
      * @return true if target is a protected target
      */
     public boolean isProtectedTarget(String target)
@@ -1352,33 +1471,32 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             return false;
 
         while (target.startsWith("//"))
-            target=URIUtil.compactPath(target);
+            target = URIUtil.compactPath(target);
 
-        for (int i=0; i<_protectedTargets.length; i++)
+        for (int i = 0; i < _protectedTargets.length; i++)
         {
-            String t=_protectedTargets[i];
+            String t = _protectedTargets[i];
             if (StringUtil.startsWithIgnoreCase(target,t))
             {
-                if (target.length()==t.length())
+                if (target.length() == t.length())
                     return true;
 
                 // Check that the target prefix really is a path segment, thus
                 // it can end with /, a query, a target or a parameter
-                char c=target.charAt(t.length());
-                if (c=='/'||c=='?'||c=='#'||c==';')
+                char c = target.charAt(t.length());
+                if (c == '/' || c == '?' || c == '#' || c == ';')
                     return true;
             }
         }
         return false;
     }
 
-
     /* ------------------------------------------------------------ */
     /**
-     * @param targets Array of URL prefix. Each prefix is in the form /path and will match
-     * either /path exactly or /path/anything
+     * @param targets
+     *            Array of URL prefix. Each prefix is in the form /path and will match either /path exactly or /path/anything
      */
-    public void setProtectedTargets (String[] targets)
+    public void setProtectedTargets(String[] targets)
     {
         if (targets == null)
         {
@@ -1386,7 +1504,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             return;
         }
 
-        _protectedTargets = Arrays.copyOf(targets, targets.length);
+        _protectedTargets = Arrays.copyOf(targets,targets.length);
     }
 
     /* ------------------------------------------------------------ */
@@ -1395,9 +1513,8 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         if (_protectedTargets == null)
             return null;
 
-        return Arrays.copyOf(_protectedTargets, _protectedTargets.length);
+        return Arrays.copyOf(_protectedTargets,_protectedTargets.length);
     }
-
 
     /* ------------------------------------------------------------ */
     /*
@@ -1411,13 +1528,13 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
 
     /* ------------------------------------------------------------ */
     /*
-     * Set a context attribute. Attributes set via this API cannot be overriden by the ServletContext.setAttribute API. Their lifecycle spans the stop/start of
+     * Set a context attribute. Attributes set via this API cannot be overridden by the ServletContext.setAttribute API. Their lifecycle spans the stop/start of
      * a context. No attribute listener events are triggered by this API.
      *
      * @see javax.servlet.ServletContext#setAttribute(java.lang.String, java.lang.Object)
      */
     @Override
-    public void setAttribute( String name, Object value)
+    public void setAttribute(String name, Object value)
     {
         _attributes.setAttribute(name,value);
     }
@@ -1441,10 +1558,9 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     }
 
     /* ------------------------------------------------------------ */
+    @Deprecated
     public void setManagedAttribute(String name, Object value)
     {
-        Object old = _managedAttributes.put(name,value);
-        updateBean(old,value);
     }
 
     /* ------------------------------------------------------------ */
@@ -1469,19 +1585,19 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
 
         if (contextPath.endsWith("/*"))
         {
-            LOG.warn(this+" contextPath ends with /*");
-            contextPath=contextPath.substring(0,contextPath.length()-2);
+            LOG.warn(this + " contextPath ends with /*");
+            contextPath = contextPath.substring(0,contextPath.length() - 2);
         }
-        else if (contextPath.length()>1 && contextPath.endsWith("/"))
+        else if (contextPath.length() > 1 && contextPath.endsWith("/"))
         {
-            LOG.warn(this+" contextPath ends with /");
-            contextPath=contextPath.substring(0,contextPath.length()-1);
+            LOG.warn(this + " contextPath ends with /");
+            contextPath = contextPath.substring(0,contextPath.length() - 1);
         }
 
-        if (contextPath.length()==0)
+        if (contextPath.length() == 0)
         {
             LOG.warn("Empty contextPath");
-            contextPath="/";
+            contextPath = "/";
         }
 
         _contextPath = contextPath;
@@ -1531,7 +1647,9 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /* ------------------------------------------------------------ */
     /**
      * Set the base resource for this context.
-     * @param base The resource used as the base for all static content of this context.
+     * 
+     * @param base
+     *            The resource used as the base for all static content of this context.
      * @see #setResourceBase(String)
      */
     public void setBaseResource(Resource base)
@@ -1542,9 +1660,10 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /* ------------------------------------------------------------ */
     /**
      * Set the base resource for this context.
-     * @param resourceBase A string representing the base resource for the context. Any string accepted
-     * by {@link Resource#newResource(String)} may be passed and the call is equivalent to
-     * <code>setBaseResource(newResource(resourceBase));</code>
+     * 
+     * @param resourceBase
+     *            A string representing the base resource for the context. Any string accepted by {@link Resource#newResource(String)} may be passed and the
+     *            call is equivalent to <code>setBaseResource(newResource(resourceBase));</code>
      */
     public void setResourceBase(String resourceBase)
     {
@@ -1593,7 +1712,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
      * @see <a href="http://jcp.org/aboutJava/communityprocess/final/jsr154/index.html">The Servlet Specification</a>
      * @see #setWelcomeFiles
      */
-    @ManagedAttribute(value="Partial URIs of directory welcome files", readonly=true)
+    @ManagedAttribute(value = "Partial URIs of directory welcome files", readonly = true)
     public String[] getWelcomeFiles()
     {
         return _welcomeFiles;
@@ -1632,7 +1751,9 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /* ------------------------------------------------------------ */
     /**
      * Set the maximum size of a form post, to protect against DOS attacks from large forms.
-     * @param maxSize the maximum size of the form content (in bytes)
+     * 
+     * @param maxSize
+     *            the maximum size of the form content (in bytes)
      */
     public void setMaxFormContentSize(int maxSize)
     {
@@ -1648,7 +1769,9 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /* ------------------------------------------------------------ */
     /**
      * Set the maximum number of form Keys to protect against DOS attack from crafted hash keys.
-     * @param max the maximum number of form keys
+     * 
+     * @param max
+     *            the maximum number of form keys
      */
     public void setMaxFormKeys(int max)
     {
@@ -1694,7 +1817,10 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             }
         }
         b.append(getClass().getSimpleName()).append('@').append(Integer.toString(hashCode(),16));
-        b.append('{').append(getContextPath()).append(',').append(getBaseResource()).append(',').append(_availability);
+        b.append('{');
+        if (getDisplayName()!=null)
+            b.append(getDisplayName()).append(',');
+        b.append(getContextPath()).append(',').append(getBaseResource()).append(',').append(_availability);
 
         if (vhosts != null && vhosts.length > 0)
             b.append(',').append(vhosts[0]);
@@ -1757,7 +1883,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
      *
      * @return a map of all the locale encodings: key is name of the locale and value is the char encoding
      */
-    public Map<String,String> getLocaleEncodings()
+    public Map<String, String> getLocaleEncodings()
     {
         if (_localeEncodingMap == null)
             return null;
@@ -1794,8 +1920,10 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
 
     /* ------------------------------------------------------------ */
     /**
-     * @param path the path to check the alias for
-     * @param resource the resource
+     * @param path
+     *            the path to check the alias for
+     * @param resource
+     *            the resource
      * @return True if the alias is OK
      */
     public boolean checkAlias(String path, Resource resource)
@@ -1807,7 +1935,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
                 LOG.debug("Aliased resource: " + resource + "~=" + resource.getAlias());
 
             // alias checks
-            for (Iterator<AliasCheck> i=_aliasChecks.iterator();i.hasNext();)
+            for (Iterator<AliasCheck> i = _aliasChecks.iterator(); i.hasNext();)
             {
                 AliasCheck check = i.next();
                 if (check.check(path,resource))
@@ -1825,9 +1953,12 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /* ------------------------------------------------------------ */
     /**
      * Convert URL to Resource wrapper for {@link Resource#newResource(URL)} enables extensions to provide alternate resource implementations.
-     * @param url the url to convert to a Resource
+     * 
+     * @param url
+     *            the url to convert to a Resource
      * @return the Resource for that url
-     * @throws IOException if unable to create a Resource from the URL
+     * @throws IOException
+     *             if unable to create a Resource from the URL
      */
     public Resource newResource(URL url) throws IOException
     {
@@ -1837,9 +1968,12 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /* ------------------------------------------------------------ */
     /**
      * Convert URL to Resource wrapper for {@link Resource#newResource(URL)} enables extensions to provide alternate resource implementations.
-     * @param uri the URI to convert to a Resource
+     * 
+     * @param uri
+     *            the URI to convert to a Resource
      * @return the Resource for that URI
-     * @throws IOException if unable to create a Resource from the URL
+     * @throws IOException
+     *             if unable to create a Resource from the URL
      */
     public Resource newResource(URI uri) throws IOException
     {
@@ -1898,9 +2032,18 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     {
         if (host == null)
             return null;
+        int connectorIndex = host.indexOf('@');
+        String connector = null;
+        if (connectorIndex > 0)
+        {
+            host = host.substring(0,connectorIndex);
+            connector = host.substring(connectorIndex);
+        }
 
         if (host.endsWith("."))
-            return host.substring(0,host.length() - 1);
+            host = host.substring(0,host.length() - 1);
+        if (connector != null)
+            host += connector;
 
         return host;
     }
@@ -1908,7 +2051,9 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     /* ------------------------------------------------------------ */
     /**
      * Add an AliasCheck instance to possibly permit aliased resources
-     * @param check The alias checker
+     * 
+     * @param check
+     *            The alias checker
      */
     public void addAliasCheck(AliasCheck check)
     {
@@ -1926,7 +2071,8 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
 
     /* ------------------------------------------------------------ */
     /**
-     * @param checks list of AliasCheck instances
+     * @param checks
+     *            list of AliasCheck instances
      */
     public void setAliasChecks(List<AliasCheck> checks)
     {
@@ -1943,7 +2089,6 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         _aliasChecks.clear();
     }
 
-
     /* ------------------------------------------------------------ */
     /**
      * Context.
@@ -1955,9 +2100,8 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
      */
     public class Context extends StaticContext
     {
-        protected boolean _enabled = true; //whether or not the dynamic API is enabled for callers
+        protected boolean _enabled = true; // whether or not the dynamic API is enabled for callers
         protected boolean _extendedListenerTypes = false;
-
 
         /* ------------------------------------------------------------ */
         protected Context()
@@ -2087,12 +2231,12 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             {
                 HttpURI uri = new HttpURI(null,null,0,uriInContext);
 
-                String pathInfo=URIUtil.canonicalPath(uri.getDecodedPath());
-                if (pathInfo==null)
+                String pathInfo = URIUtil.canonicalPath(uri.getDecodedPath());
+                if (pathInfo == null)
                     return null;
 
-                String contextPath=getContextPath();
-                if (contextPath!=null && contextPath.length()>0)
+                String contextPath = getContextPath();
+                if (contextPath != null && contextPath.length() > 0)
                     uri.setPath(URIUtil.addPaths(contextPath,uri.getPath()));
 
                 return new Dispatcher(ContextHandler.this,uri,pathInfo);
@@ -2160,7 +2304,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
                     return null;
                 Resource r = Resource.newResource(url);
                 // Cannot serve directories as an InputStream
-                if(r.isDirectory())
+                if (r.isDirectory())
                     return null;
                 return r.getInputStream();
             }
@@ -2301,7 +2445,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         {
             Object old_value = super.getAttribute(name);
             super.removeAttribute(name);
-            if (old_value != null &&!_servletContextAttributeListeners.isEmpty())
+            if (old_value != null && !_servletContextAttributeListeners.isEmpty())
             {
                 ServletContextAttributeEvent event = new ServletContextAttributeEvent(_scontext,name,old_value);
 
@@ -2358,8 +2502,9 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
 
             try
             {
-                @SuppressWarnings({ "unchecked", "rawtypes" })
-                Class<? extends EventListener> clazz = _classLoader==null?Loader.loadClass(className):(Class)_classLoader.loadClass(className);
+                @SuppressWarnings(
+                { "unchecked", "rawtypes" })
+                Class<? extends EventListener> clazz = _classLoader == null?Loader.loadClass(className):(Class)_classLoader.loadClass(className);
                 addListener(clazz);
             }
             catch (ClassNotFoundException e)
@@ -2410,12 +2555,11 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             }
         }
 
-
-        public void checkListener (Class<? extends EventListener> listener) throws IllegalStateException
+        public void checkListener(Class<? extends EventListener> listener) throws IllegalStateException
         {
             boolean ok = false;
             int startIndex = (isExtendedListenerTypes()?EXTENDED_LISTENER_TYPE_INDEX:DEFAULT_LISTENER_TYPE_INDEX);
-            for (int i=startIndex;i<SERVLET_LISTENER_TYPES.length;i++)
+            for (int i = startIndex; i < SERVLET_LISTENER_TYPES.length; i++)
             {
                 if (SERVLET_LISTENER_TYPES[i].isAssignableFrom(listener))
                 {
@@ -2424,10 +2568,10 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
                 }
             }
             if (!ok)
-                throw new IllegalArgumentException("Inappropriate listener class "+listener.getName());
+                throw new IllegalArgumentException("Inappropriate listener class " + listener.getName());
         }
 
-        public void setExtendedListenerTypes (boolean extended)
+        public void setExtendedListenerTypes(boolean extended)
         {
             _extendedListenerTypes = extended;
         }
@@ -2443,37 +2587,27 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             if (!_enabled)
                 throw new UnsupportedOperationException();
 
-            //no security manager just return the classloader
+            // no security manager just return the classloader
             if (!_usingSecurityManager)
+            {
                 return _classLoader;
+            }
             else
             {
-                //check to see if the classloader of the caller is the same as the context
-                //classloader, or a parent of it
-                try
+                // check to see if the classloader of the caller is the same as the context
+                // classloader, or a parent of it, as required by the javadoc specification.
+
+                // Wrap in a PrivilegedAction so that only Jetty code will require the
+                // "createSecurityManager" permission, not also application code that calls this method.
+                Caller caller = AccessController.doPrivileged((PrivilegedAction<Caller>)Caller::new);
+                ClassLoader callerLoader = caller.getCallerClassLoader(2);
+                while (callerLoader != null)
                 {
-                    Class<?> reflect = Loader.loadClass("sun.reflect.Reflection");
-                    Method getCallerClass = reflect.getMethod("getCallerClass", Integer.TYPE);
-                    Class<?> caller = (Class<?>)getCallerClass.invoke(null, 2);
-
-                    boolean ok = false;
-                    ClassLoader callerLoader = caller.getClassLoader();
-                    while (!ok && callerLoader != null)
-                    {
-                        if (callerLoader == _classLoader)
-                            ok = true;
-                        else
-                            callerLoader = callerLoader.getParent();
-                    }
-
-                    if (ok)
+                    if (callerLoader == _classLoader)
                         return _classLoader;
+                    else
+                        callerLoader = callerLoader.getParent();
                 }
-                catch (Exception e)
-                {
-                    LOG.warn("Unable to check classloader of caller",e);
-                }
-
                 AccessController.checkPermission(new RuntimePermission("getClassLoader"));
                 return _classLoader;
             }
@@ -2495,7 +2629,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         public void declareRoles(String... roleNames)
         {
             if (!isStarting())
-                throw new IllegalStateException ();
+                throw new IllegalStateException();
             if (!_enabled)
                 throw new UnsupportedOperationException();
         }
@@ -2510,9 +2644,9 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             return _enabled;
         }
 
-        public <T> T createInstance (Class<T> clazz) throws Exception
+        public <T> T createInstance(Class<T> clazz) throws Exception
         {
-            T o = clazz.newInstance();
+            T o = clazz.getDeclaredConstructor().newInstance();
             return o;
         }
 
@@ -2520,7 +2654,7 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         public String getVirtualServerName()
         {
             String[] hosts = getVirtualHosts();
-            if (hosts!=null && hosts.length>0)
+            if (hosts != null && hosts.length > 0)
                 return hosts[0];
             return null;
         }
@@ -2655,7 +2789,6 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         {
             return Collections.enumeration(Collections.EMPTY_LIST);
         }
-
 
         @Override
         public String getServletContextName()
@@ -2809,13 +2942,9 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         {
             try
             {
-                return clazz.newInstance();
+                return clazz.getDeclaredConstructor().newInstance();
             }
-            catch (InstantiationException e)
-            {
-                throw new ServletException(e);
-            }
-            catch (IllegalAccessException e)
+            catch (Exception e)
             {
                 throw new ServletException(e);
             }
@@ -2839,12 +2968,12 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             return _effectiveMinorVersion;
         }
 
-        public void setEffectiveMajorVersion (int v)
+        public void setEffectiveMajorVersion(int v)
         {
             _effectiveMajorVersion = v;
         }
 
-        public void setEffectiveMinorVersion (int v)
+        public void setEffectiveMinorVersion(int v)
         {
             _effectiveMinorVersion = v;
         }
@@ -2869,24 +2998,28 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
         }
     }
 
-
     /* ------------------------------------------------------------ */
-    /** Interface to check aliases
+    /**
+     * Interface to check aliases
      */
     public interface AliasCheck
     {
         /* ------------------------------------------------------------ */
-        /** Check an alias
-         * @param path The path the aliased resource was created for
-         * @param resource The aliased resourced
+        /**
+         * Check an alias
+         * 
+         * @param path
+         *            The path the aliased resource was created for
+         * @param resource
+         *            The aliased resourced
          * @return True if the resource is OK to be served.
          */
         boolean check(String path, Resource resource);
     }
 
-
     /* ------------------------------------------------------------ */
-    /** Approve all aliases.
+    /**
+     * Approve all aliases.
      */
     public static class ApproveAliases implements AliasCheck
     {
@@ -2898,9 +3031,8 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
     }
 
     /* ------------------------------------------------------------ */
-    /** Approve Aliases of a non existent directory.
-     * If a directory "/foobar/" does not exist, then the resource is
-     * aliased to "/foobar".  Accept such aliases.
+    /**
+     * Approve Aliases of a non existent directory. If a directory "/foobar/" does not exist, then the resource is aliased to "/foobar". Accept such aliases.
      */
     public static class ApproveNonExistentDirectoryAliases implements AliasCheck
     {
@@ -2910,35 +3042,52 @@ public class ContextHandler extends ScopedHandler implements Attributes, Gracefu
             if (resource.exists())
                 return false;
 
-            String a=resource.getAlias().toString();
-            String r=resource.getURI().toString();
+            String a = resource.getAlias().toString();
+            String r = resource.getURI().toString();
 
-            if (a.length()>r.length())
-                return a.startsWith(r) && a.length()==r.length()+1 && a.endsWith("/");
-            if (a.length()<r.length())
-                return r.startsWith(a) && r.length()==a.length()+1 && r.endsWith("/");
+            if (a.length() > r.length())
+                return a.startsWith(r) && a.length() == r.length() + 1 && a.endsWith("/");
+            if (a.length() < r.length())
+                return r.startsWith(a) && r.length() == a.length() + 1 && r.endsWith("/");
 
             return a.equals(r);
         }
     }
 
-
-    /** Listener for all threads entering context scope, including async IO callbacks
+    /**
+     * Listener for all threads entering context scope, including async IO callbacks
      */
     public static interface ContextScopeListener extends EventListener
     {
         /**
-         * @param context The context being entered
-         * @param request A request that is applicable to the scope, or null
-         * @param reason An object that indicates the reason the scope is being entered.
+         * @param context
+         *            The context being entered
+         * @param request
+         *            A request that is applicable to the scope, or null
+         * @param reason
+         *            An object that indicates the reason the scope is being entered.
          */
         void enterScope(Context context, Request request, Object reason);
 
-
         /**
-         * @param context The context being exited
-         * @param request A request that is applicable to the scope, or null
+         * @param context
+         *            The context being exited
+         * @param request
+         *            A request that is applicable to the scope, or null
          */
         void exitScope(Context context, Request request);
+    }
+
+    private static class Caller extends SecurityManager
+    {
+        public ClassLoader getCallerClassLoader(int depth)
+        {
+            if (depth < 0)
+                return null;
+            Class<?>[] classContext = getClassContext();
+            if (classContext.length <= depth)
+                return null;
+            return classContext[depth].getClassLoader();
+        }
     }
 }
