@@ -1,6 +1,6 @@
 //
 //  ========================================================================
-//  Copyright (c) 1995-2017 Mort Bay Consulting Pty. Ltd.
+//  Copyright (c) 1995-2019 Mort Bay Consulting Pty. Ltd.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
@@ -68,6 +68,12 @@ public class ContextHandlerCollection extends HandlerCollection
     {
         super(true);
     }
+    
+    /* ------------------------------------------------------------ */
+    public ContextHandlerCollection(ContextHandler... contexts)
+    {
+        super(true,contexts);
+    }
 
 
     /* ------------------------------------------------------------ */
@@ -79,7 +85,8 @@ public class ContextHandlerCollection extends HandlerCollection
     {
         _contextBranches.clear();
         
-        if (getHandlers()==null)
+        Handler[] handlers = getHandlers();
+        if (handlers==null)
         {
             _pathBranches=new ArrayTernaryTrie<>(false,16);
             return;
@@ -87,7 +94,7 @@ public class ContextHandlerCollection extends HandlerCollection
         
         // Create map of contextPath to handler Branch
         Map<String,Branch[]> map = new HashMap<>();
-        for (Handler handler:getHandlers())
+        for (Handler handler:handlers)
         {
             Branch branch=new Branch(handler);
             for (String contextPath : branch.getContextPaths())
@@ -241,7 +248,7 @@ public class ContextHandlerCollection extends HandlerCollection
     {
         try
         {
-            ContextHandler context = _contextClass.newInstance();
+            ContextHandler context = _contextClass.getDeclaredConstructor().newInstance();
             context.setContextPath(contextPath);
             context.setResourceBase(resourceBase);
             addHandler(context);
@@ -328,7 +335,7 @@ public class ContextHandlerCollection extends HandlerCollection
         {
             return _handler;
         }
-        
+
         @Override
         public String toString()
         {
