@@ -1,6 +1,6 @@
 //
 //  ========================================================================
-//  Copyright (c) 1995-2017 Mort Bay Consulting Pty. Ltd.
+//  Copyright (c) 1995-2019 Mort Bay Consulting Pty. Ltd.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
@@ -18,9 +18,6 @@
 
 package org.eclipse.jetty.test;
 
-import static org.hamcrest.Matchers.startsWith;
-import static org.junit.Assert.assertThat;
-
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.Inet4Address;
@@ -29,11 +26,11 @@ import java.net.Socket;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Stream;
 
 import javax.net.ssl.SSLSocket;
 import javax.servlet.AsyncContext;
@@ -63,29 +60,31 @@ import org.eclipse.jetty.servlet.ServletHolder;
 import org.eclipse.jetty.util.BufferUtil;
 import org.eclipse.jetty.util.IO;
 import org.eclipse.jetty.util.ssl.SslContextFactory;
-import org.hamcrest.Matchers;
-import org.junit.AfterClass;
-import org.junit.Assert;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.condition.DisabledOnJre;
+import org.junit.jupiter.api.condition.JRE;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
-@RunWith(Parameterized.class)
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
+
 public class HttpInputIntegrationTest
 {
-    
     enum Mode { BLOCKING, ASYNC_DISPATCHED, ASYNC_OTHER_DISPATCHED, ASYNC_OTHER_WAIT }
     public final static String EOF = "__EOF__";
     public final static String DELAY = "__DELAY__";
     public final static String ABORT = "__ABORT__";
-    
+
     private static Server __server;
     private static HttpConfiguration __config;
     private static HttpConfiguration __sslConfig;
     private static SslContextFactory __sslContextFactory;
     
-    @BeforeClass
+    @BeforeAll
     public static void beforeClass() throws Exception
     {
         __config = new HttpConfiguration();
@@ -106,6 +105,7 @@ public class HttpInputIntegrationTest
         __sslContextFactory.setKeyStorePath(jetty_distro + "/../../../jetty-server/src/test/config/etc/keystore");
         __sslContextFactory.setKeyStorePassword("OBF:1vny1zlo1x8e1vnw1vn61x8g1zlu1vn4");
         __sslContextFactory.setKeyManagerPassword("OBF:1u2u1wml1z7s1z7a1wnl1u2g");
+        __sslContextFactory.setEndpointIdentificationAlgorithm(null);
 
         // HTTPS Configuration
         __sslConfig = new HttpConfiguration(__config);
@@ -141,7 +141,7 @@ public class HttpInputIntegrationTest
         __server.start();
     }
     
-    @AfterClass
+    @AfterAll
     public static void afterClass() throws Exception
     {
         __server.stop();
@@ -162,11 +162,9 @@ public class HttpInputIntegrationTest
         String send(String uri,int delayMs, Boolean delayInFrame, int contentLength, List<String> content) throws Exception; 
     }
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> data()
+    public static Stream<Arguments> scenarios()
     {
-        List<Object[]> tests = new ArrayList<>();
-        
+        List<Scenario> tests = new ArrayList<>();
 
         // TODO other client types!
         // test with the following clients/protocols:
@@ -205,46 +203,22 @@ public class HttpInputIntegrationTest
                         // + known length + EOF
                         // + known length + content + EOF
                         // + known length + content + content + EOF
-                        
-                        tests.add(new Object[]{tests.size(),client,mode,dispatch,delayWithinFrame,200,0,-1,new String[]{}});
-                        tests.add(new Object[]{tests.size(),client,mode,dispatch,delayWithinFrame,200,8,-1,new String[]{"content0"}});
-                        tests.add(new Object[]{tests.size(),client,mode,dispatch,delayWithinFrame,200,16,-1,new String[]{"content0","CONTENT1"}});
-                        
-                        tests.add(new Object[]{tests.size(),client,mode,dispatch,delayWithinFrame,200,0,0,new String[]{}});
-                        tests.add(new Object[]{tests.size(),client,mode,dispatch,delayWithinFrame,200,8,8,new String[]{"content0"}});
-                        tests.add(new Object[]{tests.size(),client,mode,dispatch,delayWithinFrame,200,16,16,new String[]{"content0","CONTENT1"}});
+
+                        tests.add(new Scenario(client, mode, dispatch, delayWithinFrame, 200, 0, -1));
+                        tests.add(new Scenario(client, mode, dispatch, delayWithinFrame, 200, 8, -1, "content0"));
+                        tests.add(new Scenario(client, mode, dispatch, delayWithinFrame, 200, 16, -1, "content0", "CONTENT1"));
+
+                        tests.add(new Scenario(client, mode, dispatch, delayWithinFrame, 200, 0, 0));
+                        tests.add(new Scenario(client, mode, dispatch, delayWithinFrame, 200, 8, 8, "content0"));
+                        tests.add(new Scenario(client, mode, dispatch, delayWithinFrame, 200, 16, 16, "content0", "CONTENT1"));
                         
                     }
                 }
             }
         }
-        return tests;
+        return tests.stream().map(Arguments::of);
     }
-    
 
-    final int _id;
-    final Class<? extends TestClient> _client;
-    final Mode _mode;
-    final Boolean _delay;
-    final int _status;
-    final int _read;
-    final int _length;
-    final List<String> _send;
-    
-    public HttpInputIntegrationTest(int id,Class<? extends TestClient> client, Mode mode,boolean dispatch,Boolean delay,int status,int read,int length,String... send)
-    {
-        _id=id;
-        _client=client;
-        _mode=mode;
-        __config.setDelayDispatchUntilContent(dispatch);
-        _delay=delay;
-        _status=status;
-        _read=read;
-        _length=length;
-        _send = Arrays.asList(send);
-    }
-    
-    
     private static void runmode(Mode mode,final Request request, final Runnable test)
     {
         switch(mode)
@@ -276,11 +250,11 @@ public class HttpInputIntegrationTest
                 try
                 {
                     if (!latch.await(5,TimeUnit.SECONDS))
-                        Assert.fail();
+                        fail("latch expired");
                 }
                 catch(Exception e)
                 {
-                    Assert.fail();
+                    fail(e);
                 }
                 break;
             }   
@@ -296,7 +270,7 @@ public class HttpInputIntegrationTest
                         try
                         {
                             if (!latch.await(5,TimeUnit.SECONDS))
-                                Assert.fail();
+                                fail("latch expired");
                             
                             // Spin until state change
                             HttpChannelState.State s=request.getHttpChannelState().getState();
@@ -324,32 +298,33 @@ public class HttpInputIntegrationTest
         
     }
     
-    @Test
-    public void testOne() throws Exception
+    @ParameterizedTest(name = "[{index}] TEST {0}")
+    @MethodSource("scenarios")
+    public void testOne(Scenario scenario) throws Exception
     {
-        System.err.printf("[%d] TEST   c=%s, m=%s, delayDispatch=%b delayInFrame=%s content-length:%d expect=%d read=%d content:%s%n",_id,_client.getSimpleName(),_mode,__config.isDelayDispatchUntilContent(),_delay,_length,_status,_read,_send);
-
-        TestClient client=_client.newInstance();
-        String response = client.send("/ctx/test?mode="+_mode,50,_delay,_length,_send);
+        TestClient client=scenario._client.getDeclaredConstructor().newInstance();
+        String response = client.send("/ctx/test?mode="+scenario._mode,50,scenario._delay,scenario._length,scenario._send);
         
         int sum=0;
-        for (String s:_send)
+        for (String s:scenario._send)
             for (char c : s.toCharArray())
                 sum+=c;
         
-        assertThat(response,startsWith("HTTP"));
-        assertThat(response,Matchers.containsString(" "+_status+" "));
-        assertThat(response,Matchers.containsString("read="+_read));
-        assertThat(response,Matchers.containsString("sum="+sum));
+        assertTrue(response.startsWith( "HTTP"));
+        assertTrue(response.contains(" "+scenario._status+" "));
+        assertTrue(response.contains("read="+scenario._read));
+        assertTrue(response.contains("sum="+sum));
     }
-    
-    @Test
-    public void testStress() throws Exception
-    {
-        System.err.printf("[%d] STRESS c=%s, m=%s, delayDispatch=%b delayInFrame=%s content-length:%d expect=%d read=%d content:%s%n",_id,_client.getSimpleName(),_mode,__config.isDelayDispatchUntilContent(),_delay,_length,_status,_read,_send);
 
+
+    @ParameterizedTest(name = "[{index}] STRESS {0}")
+    @MethodSource("scenarios")
+    // JDK 11's SSLSocket is not reliable enough to run this test.
+    @DisabledOnJre( JRE.JAVA_11 )
+    public void testStress(Scenario scenario) throws Exception
+    {
         int sum=0;
-        for (String s:_send)
+        for (String s:scenario._send)
             for (char c : s.toCharArray())
                 sum+=c;
         final int summation=sum;
@@ -368,14 +343,14 @@ public class HttpInputIntegrationTest
             {
                 try
                 {
-                    TestClient client=_client.newInstance();
+                    TestClient client=scenario._client.getDeclaredConstructor().newInstance();
                     for (int j=0;j<loops;j++)
                     {
-                        String response = client.send("/ctx/test?mode="+_mode,10,_delay,_length,_send);
-                        assertThat(response,startsWith("HTTP"));
-                        assertThat(response,Matchers.containsString(" "+_status+" "));
-                        assertThat(response,Matchers.containsString("read="+_read));
-                        assertThat(response,Matchers.containsString("sum="+summation));
+                        String response = client.send("/ctx/test?mode="+scenario._mode,10,scenario._delay,scenario._length,scenario._send);
+                        assertTrue(response.startsWith("HTTP"));
+                        assertTrue(response.contains(" "+scenario._status+" "));
+                        assertTrue(response.contains("read="+scenario._read));
+                        assertTrue(response.contains("sum="+summation));
                         count.incrementAndGet();
                     }
                 }
@@ -394,7 +369,7 @@ public class HttpInputIntegrationTest
         for (int i=0;i<threads;i++)
             t[i].join();
         
-        assertThat(count.get(),Matchers.is(threads*loops));
+        assertEquals(count.get(),threads*loops);
     }
     
     
@@ -616,7 +591,6 @@ public class HttpInputIntegrationTest
             {
                 client.setSoTimeout(5000);
                 client.setTcpNoDelay(true);
-                client.setSoLinger(true,1);
                 OutputStream out = client.getOutputStream();
 
                 StringBuilder buffer = new StringBuilder();
@@ -706,6 +680,7 @@ public class HttpInputIntegrationTest
             }
         }
 
+        @Override
         public Socket newSocket(String host, int port) throws IOException
         {
             SSLSocket socket = __sslContextFactory.newSslSocket();
@@ -714,5 +689,33 @@ public class HttpInputIntegrationTest
         }
     }
 
-    
+    public static class Scenario
+    {
+        final Class<? extends TestClient> _client;
+        final Mode _mode;
+        final Boolean _delay;
+        final int _status;
+        final int _read;
+        final int _length;
+        final List<String> _send;
+
+        public Scenario(Class<? extends TestClient> client, Mode mode, boolean dispatch, Boolean delay, int status, int read, int length, String... send)
+        {
+            _client=client;
+            _mode=mode;
+            __config.setDelayDispatchUntilContent(dispatch);
+            _delay=delay;
+            _status=status;
+            _read=read;
+            _length=length;
+            _send = Arrays.asList(send);
+        }
+
+        @Override
+        public String toString()
+        {
+            return String.format("c=%s, m=%s, delayDispatch=%b delayInFrame=%s content-length:%d expect=%d read=%d content:%s%n",
+                    _client.getSimpleName(), _mode, __config.isDelayDispatchUntilContent(), _delay, _length, _status, _read, _send);
+        }
+    }
 }
